--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,19 @@
 	  <groupId>org.projectlombok</groupId>
 	  <artifactId>lombok</artifactId>
 	</dependency>
+	<!-- 导入配置文件处理器，配置文件进行绑定就会有提示 -->
+	<dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-configuration-processor</artifactId>
+	  <optional>true</optional>
+	</dependency>
+	
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	</dependency>
+	
     <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-test</artifactId>
