--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
 	<dependency>
 	  <groupId>junit</groupId>
 	  <artifactId>junit</artifactId>
-	  <version>4.12</version>
 	</dependency>
 	
     <dependency>
@@ -52,4 +51,21 @@
 	  <scope>test</scope>
 	</dependency>
   </dependencies>
+  
+  <!-- profile多环境支持需要配置 -->
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+	<plugins>
+		<plugin>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+	</plugins>
+  </build>
+
 </project>
