--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,17 @@
-#person: 
-#  lastName: zhangsan
-#  age: 18
-#  birth: 2016/12/12
-#  maps: 
-#   k1: v1
-#   k2: 11
-#  lists: 
-#   - dog
-#   - cat
-#  dog: 
-#   name: dog1
-#   age: 1
+spring:
+  profiles:
+    active: dev
+  
+  
+---
+server:
+  port: 8084
+spring:
+  profiles: dev
+  
+  
+---
+server:
+  port: 8085
+spring:
+  profiles: prod
