--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#logging.level.com.zj=trace
+#\u5F53\u524D\u9879\u76EE\u4E0B\u751F\u6210log\u65E5\u5FD7
+#logging.file=springboot.log
+
+#logging.path=/spring/log
 #server.port=8089
 #spring.profiles.active=dev
 
