--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,11 @@
 #logging.file=springboot.log
 
 #logging.path=/spring/log
-#server.port=8089
-#spring.profiles.active=dev
+server.port=8089
+spring.messages.basename=i18n/login
+#\u7981\u7528\u6A21\u677F\u5F15\u64CE\u7F13\u5B58
+spring.thymeleaf.cache=false
+#spring.profiles.active=prod
 
 
 #\u914D\u7F6Eperson\u503Cs
