--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.messages.basename=i18n/login
 #\u7981\u7528\u6A21\u677F\u5F15\u64CE\u7F13\u5B58
 spring.thymeleaf.cache=false
 #spring.profiles.active=prod
-
+#\u589E\u52A0\u8BBF\u95EEurl /crud
+#server.servlet.context-path=/crud
 
 #\u914D\u7F6Eperson\u503Cs
 
