--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.thymeleaf.cache=false
 #spring.profiles.active=prod
 #\u589E\u52A0\u8BBF\u95EEurl /crud
 #server.servlet.context-path=/crud
+#\u4FEE\u6539springmvc\u683C\u5F0F\u5316\u65E5\u671F
+spring.mvc.format.date=yyyy-MM-dd
+
+# \u5F00\u542F\u81EA\u52A8\u914D\u7F6EHttpMethodFilter,SpringBoot2.2.0\u4EE5\u4E0A\u7248\u672C\u9700\u8981\u6211\u4EEC\u624B\u52A8\u5F00\u542F\u914D\u7F6E
+spring.mvc.hiddenmethod.filter.enabled=true
 
 #\u914D\u7F6Eperson\u503Cs
 
